Thu Sep 16 07:45:11 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/BMakeWorkspaceCreator.pm:
        * modules/MakeWorkspaceCreator.pm:
        * modules/NMakeWorkspaceCreator.pm:

          Added a CUSTOM_TARGETS macro that will allow users to access
          custom targets that can be generated with the use of the
          'verbatim' clause in mpc files.

        * templates/nmake.mpd:

          Added markers to allow for the use of 'verbatim' with nmake.

Wed Sep 15 11:32:57 2004  Chad Elliott  <elliott_c@ociweb.com>

        * templates/bmake.mpd:
        * templates/nmake.mpd:

          Modified these templates to work correctly if no exe name, shared
          or static name is specified by the mpc file.

Mon Sep 13 12:52:22 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed a bug where if a custom file is in a directory other than
          '.' and the 'gendir' setting is used to specify that the generated
          output will be in a particular directory, it would be ignored when
          determining if generated files were listed.

        * modules/Creator.pm:
        * modules/WorkspaceCreator.pm:

          When converting slashes to back slashes (on Windows), only convert
          values when the parameter name does not contain 'flags'.  Some
          custom build executables on Windows require the use of / as
          command switches.

Tue Sep  7 07:08:26 2004  Chad Elliott  <elliott_c@ociweb.com>

        * USAGE:
        * modules/Creator.pm:
        * modules/Driver.pm:
        * modules/Options.pm:
        * modules/ProjectCreator.pm:
        * modules/TemplateParser.pm:
        * modules/WorkspaceCreator.pm:

          Added an option, -expand_env, to replace all $() variables
          referenced in MPC with the environment variable equivalent.

        * templates/vc7.mpd:

          Converted all slashes to back-slashes to more closely match the
          Windows style.
