@@ -107,6 +107,10 @@ project (workspace) name contains a capital letter then each word will be
 capitalized.  For instance, if the above mpc file example was named
 Example.mpc, then the modified project name would be Example_Client.
 
+If the value set for exename contains an asterisk then the asterisk portion
+of the name will be replaced with the current project name.  The same logic
+applies to sharedname and staticname.
+
 If multiple projects are going to be contained within a single workspace
 (using mwc.pl), there can be no duplication of project names.  This is
 disallowed due to limitations of some workspace tools.
